--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/movies.png" />
+    <link rel="icon" href="%PUBLIC_URL%/icon-movie.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta
+      property="og:description"
+      content="Film Library is your personal movie theater. Watch your favorite movies and TV shows anytime, on any device. Sign up and get access to thousands of movies and TV shows today!"
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/filmoteka-main.png" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://dmitriyushkvarok.github.io/filmoteka-react/"
+    />
+    <meta
+      name="keywords"
+      content="movies, TV shows, online streaming, cinema, movie ratings, comedy, drama, horror, release year, actors, directors, film festivals, movie awards, trailers"
+    />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
